# adios2-transmission

./: .gitignore  CMakeLists.txt  INSTALLATION.md  NETWORK_SETUP.md  QUICKSTART.md  README.md  USAGE.md  adios2_config_receiver.xml  adios2_config_sender.xml  analyze_metrics.py  benchmark_mpi.sh  gs_sender.cpp  hostfile.txt  mpi_benchmark_results.csv  mpi_benchmark_results1220.csv  mpi_benchmark_results1220_l.csv  receiver.cpp  run_gs_simulation.sh  run_receiver.sh  run_receiver_slurm.sh  run_sender.sh  run_sender_slurm.sh  send_bp_file.sh  sender.cpp  sender_from_bp.cpp  setup_nodes.sh  test_local.sh
